Corrected Color Contrast on Navigation Links.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 $active-color: #06b61edc;
-$navlink-color: #2b2b2b;
+$navlink-color: #111111;
 $navlink-text-color: #7b6dff;
 
 :root {
@@ -90,5 +90,6 @@ nav a.active {
 
 .flex-col {
   flex-direction: column;
+  align-items: center;
 }
 
